Made fixes on the user resource
